--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <header id = "soteria">
-      <nav>
+      <image class="logo">
          <a href="index.html"><img src="kuvat/logo.png"></a>
-      </nav>
+
       <nav class="valikko">
-            <li><a href="index.html">Etusivu</a>
-            <li><a href="palvelut.html">Palvelut</a>
-            <li><a href="yhteystiedot.html" id="valittu">Yhteystiedot</a>
+            <a href="index.html">Etusivu</a>
+            <a href="palvelut.html">Palvelut</a>
+            <a href="yhteystiedot.html" id="valittu">Yhteystiedot</a>
       </nav>
       <h1>Ei huolta. Olemme apunasi.</h1>
       <a href="palvelut.html" class="toimintakehote"> Löydä elämäsi reissu!</a>
@@ -45,30 +45,15 @@
               <tr>
                 <td>Tapaamisia voidaan sopia myös joustavasti!</td>
 
-                <br>  Tapaamisia voidaan sopia myös joustavasti! 
-                <br>  Saat meihin yhteyden myös Tiktokin, Facebookin sekä Instagramin kautta.
-                </tr>
+                  Tapaamisia voidaan sopia myös joustavasti! 
+                  Saat meihin yhteyden myös Tiktokin, Facebookin sekä Instagramin kautta.
+               </tr>
            
            </table>
-           <table>
-              <tr>
-                 <th>Aukioloaikoina</th>
-              </tr>
-              <tr>
-                 <td>puh: 0300-782343 </td>
-              </tr>
-              <tr>
-                 <td><a href="mailto:info@soteria.fi">info@soteria.fi</a>
-              </tr>
-              <tr>
-                 <td>&nbsp;</td>
-              </tr>
-              <tr>
-                 <td>Kaasutehtaankatu 20, 00540 Helsinki</td>
-              </tr>
 
-     <h2 id="h2yht">Matkassasi mukana</h2>
-     <figure>
+   <h2 id="h2yht">Matkassasi mukana</h2>
+
+   <figure>
       <img class="kuva" src="./kuvat/Kuva3.png" alt="Picture of a staff member">
       <p>CEO, Maria Kuutila</p>
       <p> Puh.: 0300-9480</p>
@@ -90,7 +75,7 @@
 </div>
                
  <footer>
-        <div > 
+      <div class="some" > 
          <a href = "https://www.facebook.com/">
             <img class="icons" src="./someicons/facebook.png" alt="facebook icon">
          </a>
