--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header id="soteria">
 
-        <image class="logo">
+        <div class="logo"></div>
             <a href="index.html"><img src="kuvat/logo.png" alt="teksti Soteria, nainen silmät kiinni maapallo taustalla"></a>
 
         <nav class="valikko">
@@ -20,8 +20,13 @@
             <a href="yhteystiedot.html">Yhteystiedot</a>
         </nav>
         <!--vlilehdet palveluihin sekä yhteystietoihin-->
-    
+        <br>
+        <br>
+        <br>
+
         <h1 id="slogan">Naiset matkassa turvallisin mielin</h1>
+        <br>
+        <br>
         <a href="yhteystiedot.html" class="toimintakehote">Tule mukaan!</a>
     </header>
 
