--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -10,15 +10,23 @@
 </head>
 <body>
     <header id = "soteria">
-      <image class="logo">
-         <a href="index.html"><img src="kuvat/logo.png"></a>
+      
+         <div class="logo"></div>
+         <a href="index.html"><img src ="kuvat/logo.png" alt="teksti Soteria ja nainen silmät kiinni maapallo taustalla"></a>
 
       <nav class="valikko">
             <a href="index.html">Etusivu</a>
             <a href="palvelut.html">Palvelut</a>
             <a href="yhteystiedot.html" id="valittu">Yhteystiedot</a>
       </nav>
+      <br>
+      <br>
+      <br>
+
       <h1>Ei huolta. Olemme apunasi.</h1>
+
+      <br>
+      <br>
       <a href="palvelut.html" class="toimintakehote"> Löydä elämäsi reissu!</a>
     </header>
 
@@ -43,9 +51,8 @@
 
             <table>
               <tr>
-                <td>Tapaamisia voidaan sopia myös joustavasti!</td>
+                Tapaamisia voidaan sopia myös joustavasti!</td>
 
-                  Tapaamisia voidaan sopia myös joustavasti! 
                   Saat meihin yhteyden myös Tiktokin, Facebookin sekä Instagramin kautta.
                </tr>
            
