--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -51,6 +51,25 @@
            
            </table>
 
+            <table>
+                <tr>
+                    <th>Aukioloaikoina</th>
+                </tr>
+                <tr>
+                    <td>puh: 0300-782343</td>
+                </tr>
+                <tr>
+                <td><a href = "mailto:info@soteria.fi"<a></td>
+                </tr>
+                <tr>
+                    <td>&nbsp;</td>
+                </tr>
+                <tr>
+                    <td>Kaasutehtaan 20, 00540 Helsinki</td>
+                </tr>
+            </table>
+        </div>
+
    <h2 id="h2yht">Matkassasi mukana</h2>
 
    <figure>
