--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -10,14 +10,11 @@
 </head>
 <body>
     <header id = "soteria">
-<<<<<<< HEAD
       
          <div class="logo"></div>
          <a href="index.html"><img src ="kuvat/logo.png" alt="teksti Soteria ja nainen silmät kiinni maapallo taustalla"></a>
-=======
       <image class="logo">
          <a href="index.html"><img src="kuvat/logo.png"alt=" Soterian logo"></a>
->>>>>>> 7f2dc0e1018cab4503c245690035f4e9215934d3
 
       <nav class="valikko">
             <a href="index.html">Etusivu</a>
@@ -85,7 +82,7 @@
    <h2 id="h2yht">Matkassasi mukana</h2>
 
    <figure>
-      <img class="kuva" src="./kuvat/Kuva3.png" alt="Picture of a staff member">
+      <img class="kuva" src="./kuvat/Kuva3.png" alt="hymyilevä vanhempi nainen vaaleassa villatakissa">
       <p>CEO, Maria Kuutila</p>
       <p> Puh.: 0300-9480</p>
       <p>Gmail: mariakuutila@gmail.com</p>
