--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -10,11 +10,9 @@
 </head>
 <body>
     <header id = "soteria">
-      
-         <div class="logo"></div>
-         <a href="index.html"><img src ="kuvat/logo.png" alt="teksti Soteria ja nainen silmät kiinni maapallo taustalla"></a>
-      <image class="logo">
-         <a href="index.html"><img src="kuvat/logo.png"alt=" Soterian logo"></a>
+        
+        <div class="logo"></div>
+            <a href="index.html"><img src="kuvat/logo.png" alt="teksti Soteria, nainen silmät kiinni maapallo taustalla"></a>
 
       <nav class="valikko">
             <a href="index.html">Etusivu</a>
