--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -79,21 +79,27 @@
    <figure>
       <img class="kuva" src="./kuvat/Kuva3.png" alt="hymyilevä vanhempi nainen vaaleassa villatakissa">
       <p>CEO, Maria Kuutila</p>
-      <p> Puh.: 0300-9480</p>
-      <p>Gmail: mariakuutila@gmail.com</p>
+      <p> Puh.:
+          0300-9480</p>
+      <p>Gmail:
+          mariakuutila@gmail.com</p>
    </figure>
    <figure>
       <img class="kuva" src="./kuvat/Kuva1.png" alt="hymyilevä nainen huivi päässä">
       <p>COC, Helly Viima</p>
-      <p>Puh. : 0300-8623</p>
-      <p>Gmail:hellyviima@gmail.com</p>
+      <p>Puh. :
+          0300-8623</p>
+      <p>Gmail:
+          hellyviima@gmail.com</p>
    </figure>
   
    <figure>
       <img class="kuva" src="./kuvat/Kuva2.png" alt="nuori nainen raitapaidassa, joka hymyilee">
       <p>Matkaopas, Liisa Kuutila</p>
-      <p>Puh. : 0300-3458</p>
-      <p>Gmail:liisakuutila@gmail.com</p>
+      <p>Puh. : 
+          0300-3458</p>
+      <p>Gmail:
+          liisakuutila@gmail.com</p>
    </figure>
 </div>
                
