--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <br>
         <br>
 
-        <h1 id="slogan">Naiset matkassa turvallisin mielin</h1>
+        <h1>Naiset matkassa turvallisin mielin</h1>
         <br>
         <br>
         <a href="yhteystiedot.html" class="toimintakehote">Tule mukaan!</a>
