--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="fi">
 <head>
     <meta charset="UTF-8">
@@ -32,31 +31,35 @@
 
     
 <div class="sisalto">
-     <p>Oletko väsynyt odottamaan muiden aikatauluja lähtiessäsi matkalle, mutta sinua pelottaa myös lähteä yksin? </p>
-        <p>Soteria tarjoaa luotettavan matkakumppanin vaikka matkustaisitkin yksin. Sovelluksemme avulla pysyt turvassa ja saat aina yhteyden meihin. Tarjoamme vinkkejä ja arvokasta apua matkasi kaikissa vaiheissa. Ole rohkeasti yhteydessä niin suunnitellaan juuri sinun unelmiesi matka!</p> <!--kerrotaan esittely kyseisestä palvelusta. A hook.-->
-
+     <p>Oletko väsynyt odottamaan muiden aikatauluja lähtiessäsi matkalle, mutta sinua pelottaa myös lähteä yksin?<br>
+      <br>
+        Soteria tarjoaa luotettavan matkakumppanin vaikka matkustaisitkin yksin. Sovelluksemme avulla pysyt turvassa ja saat aina yhteyden meihin. Tarjoamme vinkkejä ja arvokasta apua matkasi kaikissa vaiheissa. Ole rohkeasti yhteydessä niin suunnitellaan juuri sinun unelmiesi matka!</p> <!--kerrotaan esittely kyseisestä palvelusta. A hook.-->
+   <figure>
+      <img class="satama" src="./kuvat/satama.jpg" alt="Kuva naisesta, joka kävelee satamassa laivojen vieressä">
+         </figure> 
  <h2>Tavoitteenamme turvallisempaa ympäristöä yksin matkustaville naisille</h2>
- <p> Yhteistyömme avulla pystyt kommunikoimaan muiden yksinmatkustavien kanssa sekä verkostoitumaan.</p>
- <p>Tuomme sinut maailman luokse, jos pelkäät ensimmäistä askelta</p>
- <p>Ei hätää! Olemme mukanasi koko matkan halutessanne</p>
+ <p> Yhteistyömme avulla pystyt kommunikoimaan muiden yksinmatkustavien kanssa sekä verkostoitumaan.<br>
+   <br>
+   Tuomme sinut maailman luokse, jos pelkäät ensimmäistä askelta<br>
+   <br>
+   Ei hätää! Olemme mukanasi koko matkan halutessanne</p>
 
  <h3>Yhteistyömme</h3>
- <p> Tärkenä yhteistyön lähteenämme toimii kodgjohs hiudhid
-    jjdohhgff ks. oishfffjfg
-    nsjkjgd ijsgj osuyef jg od skkdg. jsjksbmdg.</p>
+ <p>Toimimme yhteistyössä isojen matkanjärjestäjien kanssa, joten pystymme räätälöimään juuri sinun tarpeidesi mukaisen matkan.</p>
 
    <figure>
     <img class="indexkuva" src="./kuvat/pictureforindexx.jpeg" alt="Kuva rannasta, jonka vedessä uiskentelee kilpikonnia">
       <!-- kuva, jossa kerrotaan alt tekstin avulla sisältöä-->
     </figure> 
 
-        <h2>Kuin olisit kotonasi</h2>
-           <p> Turvallista oloa sekä yhteishenkeä jksdi idgikd. jidijsghs
-            ikddjkdkj kjdjk. H lisjilshkk hshsfjd jsjs. </p>
-           <p> jgddjksk skd kkd ok jsgj ksks dfshyue jsfbjoa osin sbdh.
-            kdj. Kuule oma äänesi meidän avullamme. jkshus dhuua fhs gjih.
-            kdsjgsjk sjlgj il hkjskf h.</p> 
-           <p> djkdjkdh. sjoigjis njdkjs hsdjd jshf jds fndndf. 
+        <h4>Kaikkein tärkeintä on turvallisuus</h4>
+           <p>Yksin vieraaseen paikkaan lähteminen tuntuu aina jännittävältä, mutta meidän avullamme voit olla huoletta ja keskittyä olennaiseen.<br>
+            <br>
+            Teemme yhteistyötä paikallisten turvapalveluiden kanssa ja meiltä löytyy myös omaa henkilökuntaa, joka on apunasi 24/7. Älä siis turhaan jätä elämäsi reissua tekemättä!
+            <br>
+            <br>
+            <br>
+            <br>
            </p>
            
          </div>
@@ -83,3 +86,4 @@
 </body>
 
 </html>
+
