--- a/palvelut.html
+++ b/palvelut.html
@@ -31,9 +31,34 @@
     </header>
 
     <div class ="sisalto">
+        <h2>Sovelluksemme avulla pysyt turvassa</h2>
+        <p class="lataa">Lataa sovelluskaupasta</p>
+        <div class = "apps">
+            <a href = "https://www.apple.com/fi/app-store/">
+                <img class = "icons" src= "./someicons/app-store.png" alt ="appstore icon">
+            </a>
+            <a href = "https://play.google.com/store/apps">
+                <img class = "icons" src= "./someicons/playstore.png" alt ="playstore icon">
+            </a>
+        </div>
     <div>
-        <img class="puhelin" src=".kuvat/sovellus.png">
+        <img class="puhelin" src="./kuvat/sovellus.jpg" alt ="kuva kännykästä, jossa Soterian sovellus">
     </div>
+    <h3>Valitse tarpeisiisi sopiva kokonaisuus</h3>
+    <p>Tarjoamme kaksi erilaista pakettia, joista jokainen voi löytää itselleen sopivimman<br>
+    <br>
+    Hopea<br>
+    Sisältää vinkkejä turvalliseen matkustamiseen, saat yksilöllisiä uutiskirjeitä, pääset osaksi Soteria-yhteisöä<br>
+    <br>
+    Hinta 19,90EUR/kk<br>
+    <br>
+    Kulta<br>
+    Yllä mainitut sekä apua matkan varaamiseen, aktiviteettien varaamiseen kohteessa, turvapalvelut<br>
+    <br>
+    Hinta 29,90EUR/kk<br>
+    <br>
+    Näiden lisäksi voimme räätälöidä yksittäisiä paketteja juuri sinulle. Ole rohkeasti yhteydessä!
+    </p>
     </div>
 
     <footer>
