--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       <br>
         Soteria tarjoaa luotettavan matkakumppanin vaikka matkustaisitkin yksin. Sovelluksemme avulla pysyt turvassa ja saat aina yhteyden meihin. Tarjoamme vinkkejä ja arvokasta apua matkasi kaikissa vaiheissa. Ole rohkeasti yhteydessä niin suunnitellaan juuri sinun unelmiesi matka!</p> <!--kerrotaan esittely kyseisestä palvelusta. A hook.-->
    <figure>
-      <img class="satama" src="./kuvat/satama.jpg" alt="Kuva naisesta, joka kävelee satamassa laivojen vieressä">
-         </figure> 
+    <img class="satama" src="./kuvat/satama.JPG" alt="Kuva naisesta, joka kävelee satamassa laivojen vieressä">
+    </figure> 
  <h2>Tavoitteenamme turvallisempaa ympäristöä yksin matkustaville naisille</h2>
  <p> Yhteistyömme avulla pystyt kommunikoimaan muiden yksinmatkustavien kanssa sekä verkostoitumaan.<br>
    <br>
