--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -104,10 +104,9 @@
       <p>Gmail:
           liisakuutila@gmail.com</p>
    </figure>
-</div>
-               
- <footer>
-      <div class="some" > 
+</div>          
+    <footer>
+        <div > 
          <a href = "https://www.facebook.com/">
             <img class="icons" src="./someicons/facebook.png" alt="facebook icon">
          </a>
